update logos bug: logos not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,35 @@ body {
     height: 90px;
 }
 
+.sami-logo {
+    width: 140px;
+    height: 90px;
+}
+
+.idems-logo {
+    width: 100px;
+    height: 60px;
+}
+
+.aims-ghana {
+    width: 100px;
+    height: 60px;
+}
+
+.ami-ghana {
+    width: 140px;
+    height: 90px;
+}
+
+.togo-logo {
+    width: 140px;
+    height: 90px;
+}
+
+.pan_african_hub {
+    width: 70px;
+    height: 100px;
+}
 
 
 
